--- a/opensrp-anc/src/main/resources/anc_counselling_treatment_np.properties
+++ b/opensrp-anc/src/main/resources/anc_counselling_treatment_np.properties
@@ -140,7 +140,7 @@ anc_counselling_treatment.step6.pe_risk_aspirin_notdone.options.other.text = \u0
 anc_counselling_treatment.step10.malaria_counsel.options.done.text = \u0917\u0930\u093F\u0938\u0915\u0947\u0915\u094B \u091B
 anc_counselling_treatment.step3.constipation_counsel_notdone.hint = \u0915\u093E\u0930\u0923 
 anc_counselling_treatment.step3.constipation_counsel_notdone.options.other.text = \u0905\u0930\u0941 (\u0916\u0941\u0932\u093E\u0909\u0928\u0941\u0939\u094B\u0938)
-anc_counselling_treatment.step11.tt2_date.v_required.err = TTCV \u0921\u094B\u091C #\u0968 \u091A\u093E\u0939\u093F\u0928\u094D\u091B 
+anc_counselling_treatment.step11.tt2_date.v_required.err = Td \u0921\u094B\u091C #\u0968 \u091A\u093E\u0939\u093F\u0928\u094D\u091B 
 anc_counselling_treatment.step7.rh_negative_counsel.options.done.text = \u0917\u0930\u093F\u0938\u0915\u0947\u0915\u094B 
 anc_counselling_treatment.step11.flu_dose_notdone.options.woman_is_ill.text = \u092E\u0939\u093F\u0932\u093E \u092C\u093F\u0930\u093E\u092E\u0940 \u091B\u093F\u0928 
 anc_counselling_treatment.step9.ifa_low_prev.label = \u0930\u0915\u094D\u0924\u0905\u0932\u094D\u092A\u0924\u093E \u0930\u094B\u0915\u0925\u093E\u092E \u0915\u094B \u0932\u093E\u0917\u093F \u0926\u0948\u0928\u093F\u0915 \u0969\u0966 \u0926\u0947\u0916\u093F \u096C\u0966 mg \u0906\u0908\u0930\u0928 \u0930 \u0966.\u096A mg \u092B\u094B\u0932\u093F\u0915 \u090F\u0938\u093F\u0921 \u0932\u0947\u0916\u094D\u0928\u0941\u0939\u094B\u0938 
@@ -517,7 +517,7 @@ anc_counselling_treatment.step5.ifa_anaemia.options.not_done.text = \u0917\u0930
 anc_counselling_treatment.step3.nausea_not_relieved_counsel_notdone.hint = \u0915\u093E\u0930\u0923
 anc_counselling_treatment.step5.hepb_positive_counsel.label_info_title = \u0939\u0947\u092A\u091F\u093E\u0908\u091F\u093F\u0938 \u092C\u0940 \u092A\u094B\u091C\u093F\u091F\u093F\u092D \u092C\u093E\u0930\u0947 \u092A\u0930\u093E\u092E\u0930\u094D\u0936 
 anc_counselling_treatment.step5.hiv_positive_counsel.options.not_done.text = \u0917\u0930\u093F\u090F\u0915\u094B \u091B\u0948\u0928 
-anc_counselling_treatment.step11.tt_dose_notdone.v_required.err = TTCV \u0916\u094B\u092A \u0928\u0932\u0917\u093E\u0909\u0928\u0941\u0915\u094B \u0915\u093E\u0930\u0923 \u0932\u0947\u0916\u094D\u0928\u0941\u0939\u094B\u0938
+anc_counselling_treatment.step11.tt_dose_notdone.v_required.err = Td \u0916\u094B\u092A \u0928\u0932\u0917\u093E\u0909\u0928\u0941\u0915\u094B \u0915\u093E\u0930\u0923 \u0932\u0947\u0916\u094D\u0928\u0941\u0939\u094B\u0938
 anc_counselling_treatment.step4.increase_energy_counsel.options.done.text = \u0917\u0930\u093F\u0938\u0915\u0947\u0915\u094B \u091B
 anc_counselling_treatment.step7.title = \u092A\u0930\u093E\u092E\u0930\u094D\u0936
 anc_counselling_treatment.step4.eat_exercise_counsel.label_info_text = \u0938\u094D\u0935\u093E\u0938\u094D\u0925\u094D\u092F \u0930\u0939\u0928 \u0930 \u0917\u0930\u094D\u092D\u093E\u0935\u0938\u094D\u0925\u093E\u092E\u093E \u0927\u0947\u0930\u0948 \u0924\u094C\u0932 \u092C\u0922\u094D\u0928 \u0928\u0926\u093F\u0928\u0915\u094B \u0932\u093E\u0917\u093F \u0938\u094D\u0935\u0938\u094D\u0925\u094D\u092F \u0916\u093E\u0928\u0947\u0915\u0941\u0930\u093E \u0916\u093E\u0928 \u0930 \u0936\u093E\u0930\u0930\u093F\u0915 \u092C\u094D\u092F\u093E\u092F\u093E\u092E \u0917\u0930\u094D\u0928 \u092A\u0930\u093E\u092E\u0930\u094D\u0936 \u0926\u093F\u0928\u0941\u0939\u094B\u0938\n\n[Nutritional and Exercise Folder]
