--- a/opensrp-anc/src/main/resources/anc_profile_np.properties
+++ b/opensrp-anc/src/main/resources/anc_profile_np.properties
@@ -16,7 +16,7 @@ anc_profile.step4.allergies.options.aluminium_hydroxide.text = \u0905\u0932\u094
 anc_profile.step7.alcohol_substance_use.options.cocaine.text = \u0915\u094B\u0915\u0947\u0928
 anc_profile.step5.hepb_immun_status.v_required.err = Favor selecionar o estado de imuniza\u00E7\u00E3o para Hep B
 anc_profile.step8.partner_hiv_status.label =\u0936\u094D\u0930\u0940\u092E\u093E\u0928\u0915\u094B \u090F\u091A \u0906\u0907 \u092D\u093F \u0938\u094D\u0925\u093F\u0924\u093F
-anc_profile.step5.flu_immunisation_toaster.toaster_info_title = \u092B\u094D\u0932\u0941\u0915\u094B \u0932\u093E\u0917\u093F \u0916\u094B\u092A \u0932\u0917\u093E\u0909\u0928 \u0938\u0941\u091D\u093E\u092C \u0926\u093F\u0928\u0947
+anc_profile.step5.flu_immunisation_toaster.toaster_info_title = \u0915\u094B\u092D\u093F\u0921 \u0916\u094B\u092A \u0932\u0917\u093E\u0909\u0928 \u0938\u0932\u094D\u0932\u093E\u0939 \u0926\u093F\u0928\u0941\u0939\u094B\u0938
 anc_profile.step2.lmp_ultrasound_gest_age_selection.v_required.err = \u0917\u0930\u094D\u092D\u0939\u092A\u094D\u0924\u093E \u091B\u093E\u0928\u094D\u0928\u0941\u0939\u094B\u0938
 anc_profile.step4.surgeries.options.removal_of_ovary.text = \u0913\u092B\u094B\u0930\u0947\u0915\u094D\u091F\u094B\u092E\u0940 
 anc_profile.step1.occupation.options.formal_employment.text = \u0914\u092A\u091A\u093E\u0930\u093F\u0915 \u0930\u094B\u091C\u0917\u093E\u0930
@@ -75,7 +75,7 @@ anc_profile.step7.caffeine_intake.label = \u0926\u0948\u0928\u093F\u0915 \u0915\
 anc_profile.step6.medications.options.metoclopramide.text = \u092E\u0947\u091F\u094B\u0915\u094D\u0932\u094B\u092A\u094D\u0930\u093E\u092E\u093E\u0907\u0921
 anc_profile.step8.hiv_risk_counselling_toaster.toaster_info_title = \u090F\u091A \u0906\u0907 \u092D\u093F \u0915\u094B \u091C\u094B\u0916\u093F\u092E \u0938\u092E\u094D\u092C\u0928\u094D\u0927\u093F \u0938\u0932\u094D\u0932\u093E\u0939
 anc_profile.step4.surgeries.options.cervical_cone.text = \u092A\u093E\u0920\u0947\u0918\u0930\u0915\u094B \u092E\u0941\u0916\u0915\u094B \u0936\u0932\u094D\u092F\u0915\u094D\u0930\u093F\u092F\u093E
-anc_profile.step5.flu_immun_status.label = \u092B\u094D\u0932\u0941 \u0915\u094B \u0916\u094B\u092A\u0915\u094B \u0935\u093F\u0935\u0930\u0923
+anc_profile.step5.flu_immun_status.label = \u0915\u094B\u092D\u093F\u0921 \u0916\u094B\u092A\u0915\u094B \u0935\u093F\u0935\u0930\u0923
 anc_profile.step2.sfh_ultrasound_gest_age_selection.label =
 anc_profile.step7.alcohol_substance_use.label = \u0930\u0915\u094D\u0938\u093F \u0905\u0925\u0935\u093E \u0905\u0930\u0941 \u0932\u093E\u0917\u0942\u092A\u0926\u093E\u0930\u094D\u0925 \u092A\u094D\u0930\u092F\u094B\u0917 \u0917\u0930\u094D\u0928\u0941\u0939\u0941\u0928\u094D\u091B?
 anc_profile.step1.occupation_other.v_required.err = \u0906\u092B\u094D\u0928\u094B \u092A\u0947\u0936\u093E \u0916\u0941\u0932\u093E\u0909\u0928\u0941\u0939\u094B\u0938
@@ -93,7 +93,7 @@ anc_profile.step1.hiv_risk_counseling_toaster.text = \u090F\u091A \u0906\u0907 \
 anc_profile.step7.tobacco_user.v_required.err =\u092E\u0939\u093F\u0932\u093E\u0932\u0947 \u0915\u0941\u0928\u0948 \u0938\u0941\u0930\u094D\u0924\u093F\u091C\u0928\u094D\u092F \u0915\u0941\u0930\u093E \u0916\u093E\u0928\u091B\u093F\u0928 \u092D\u0928\u0947 \u091B\u093E\u0928\u094D\u0928\u0941\u0939\u094B\u0938
 anc_profile.step3.substances_used.options.other.text = \u0905\u0928\u094D\u092F (\u0916\u0941\u0932\u093E\u0909\u0928\u0941\u0939\u094B\u0938)
 anc_profile.step6.medications.options.calcium.text = \u0915\u094D\u092F\u093E\u0932\u094D\u0938\u093F\u092F\u092E
-anc_profile.step5.flu_immunisation_toaster.toaster_info_text = \u0917\u0930\u094D\u092D\u0935\u0924\u0940 \u092E\u0939\u093F\u0932\u093E\u0939\u0930\u0941\u0932\u0947 \u0917\u0930\u094D\u092D\u093E\u0935\u0938\u094D\u0925\u093E\u0915\u094B \u0915\u0941\u0928\u0948\u092A\u0928\u093F \u0938\u092E\u092F\u092E\u093E trivalent inactivated influenza \u0916\u094B\u092A \u0932\u0917\u093E\u0909\u0928\u0941 \u092A\u0930\u094D\u091B
+anc_profile.step5.flu_immunisation_toaster.toaster_info_text =\u0938\u092C\u0948 \u0917\u0930\u094D\u092D\u0935\u0924\u0940 \u092E\u0939\u093F\u0932\u093E\u0939\u0930\u0941\u0932\u093E\u0908 \u0917\u0930\u094D\u092D\u093E\u0935\u0938\u094D\u0925\u093E\u0915\u094B \u092A\u0939\u093F\u0932\u094B \u0924\u094D\u0930\u0948\u092E\u093E\u0938\u093F\u0915/ \u0969\u092E\u0939\u093F\u0928\u093E \u0915\u091F\u093F\u0938\u0915\u0947\u092A\u091B\u093F \u0915\u094B\u092D\u093F\u0921 \u0935\u093F\u0930\u0941\u0926\u094D\u0927 \u0916\u094B\u092A \u0932\u0917\u093E\u0909\u0928 \u0938\u0932\u094D\u0932\u093E\u0939 \u0926\u093F\u0928\u0941\u0939\u094B\u0938
 anc_profile.step6.title =  \u0914\u0937\u0927\u093F
 anc_profile.step6.medications.options.hemorrhoidal.text = \u092A\u093E\u0907\u0932\u094D\u0938\u0915\u094B \u0914\u0937\u0927\u093F  (\u0939\u0947\u092E\u094B\u0930\u094B\u0908\u0921\u0932 \u0914\u0937\u0927\u093F)
 anc_profile.step8.hiv_risk_counselling_toaster.text = \u090F\u091A \u0906\u0907 \u092D\u093F \u091C\u094B\u0916\u093F\u092E\u0915\u094B \u092C\u093E\u0930\u0947\u092E\u093E \u0938\u0932\u094D\u0932\u093E\u0939
@@ -107,7 +107,7 @@ anc_profile.step3.substances_used.options.injectable_drugs.text = \u0938\u0941\u
 anc_profile.step5.flu_immun_status.options.unknown.text = \u0925\u093E\u0939\u093E \u091B\u0948\u0928
 anc_profile.step7.alcohol_substance_enquiry.options.no.text = \u091B\u0948\u0928
 anc_profile.step4.surgeries.label = \u0915\u0941\u0928\u0948 \u0905\u092A\u094D\u0930\u0947\u0936\u0928 \u0917\u0930\u0947\u0915\u094B \u091B?
-anc_profile.step5.flu_immun_status.options.seasonal_flu_dose_given.text =\u0938\u092C\u0948 \u0938\u0941\u0908 \u0932\u0917\u093E\u0907\u0938\u0915\u0947\u0915\u094B
+anc_profile.step5.flu_immun_status.options.seasonal_flu_dose_given.text =\u0916\u094B\u092A \u0932\u0917\u093E\u0907\u0938\u0915\u0947\u0915\u094B
 anc_profile.step6.medications.options.anti_hypertensive.text = \u090F\u0928\u094D\u091F\u0940-\u0939\u093E\u0907\u092A\u0930\u091F\u0947\u0928\u094D\u0938\u093F\u092C (Anti-hypertensive)
 anc_profile.step3.last_live_birth_preterm.options.dont_know.text = \u0928\u093F\u0937\u094D\u0915\u0930\u094D\u0937\u092E\u093E \u0928\u0906\u090F\u0915\u094B
 anc_profile.step5.tt_immun_status.options.unknown.text = \u0925\u093E\u0939\u093E \u091B\u0948\u0928
@@ -135,7 +135,7 @@ anc_profile.step2.sfh_ultrasound_gest_age_selection.options.ultrasound.text =\u0
 anc_profile.step5.tt_immun_status.options.ttcv_not_received.text = \u0915\u0941\u0928\u0948 \u092A\u0928\u093F \u0921\u094B\u091C \u0932\u093F\u090F\u0915\u094B \u091B\u0948\u0928
 anc_profile.step5.hepb_immun_status.options.unknown.text = Desconhecido
 anc_profile.step3.prev_preg_comps.options.vacuum_delivery.text = \u092B\u094B\u0930\u0938\u0947\u092A (forceps)
-anc_profile.step5.flu_immunisation_toaster.text = \u092B\u094D\u0932\u0941\u0915\u094B \u0938\u0941\u0908 \u092A\u094D\u0930\u092F\u094B\u0917 \u0917\u0930\u094D\u0928 \u0938\u0941\u091D\u093E\u092C \u0926\u093F\u0928\u0941\u092A\u0930\u094D\u091B
+anc_profile.step5.flu_immunisation_toaster.text = \u0915\u094B\u092D\u093F\u0921 \u0916\u094B\u092A \u0932\u0917\u093E\u0909\u0928 \u0938\u0932\u094D\u0932\u093E\u0939 \u0926\u093F\u0928\u0941\u0939\u094B\u0938
 anc_profile.step5.hepb_immun_status.options.not_received.text = \u0938\u0941\u0908 \u0932\u0917\u093E\u090F\u0915\u094B \u091B\u0948\u0928
 anc_profile.step3.prev_preg_comps.options.alcohol_use.text = \u0930\u0915\u094D\u0938\u0940\u0915\u094B \u092A\u094D\u0930\u092F\u094B\u0917\u0915\u094B
 anc_profile.step2.ultrasound_gest_age_selection.options.ultrasound.text = \u092F\u0941 \u090F\u0938 \u091C\u093F \u092A\u094D\u0930\u092F\u094B\u0917 \u0917\u0930\u0947\u0930 
@@ -254,7 +254,7 @@ anc_profile.step6.medications.options.dont_know.text = \u0925\u093E\u0939\u093E 
 anc_profile.step7.condom_use.options.yes.text = \u0917\u0930\u094D\u091B\u0941
 anc_profile.step4.health_conditions.options.cancer.text = \u0915\u094D\u092F\u093E\u0928\u094D\u0938\u0930- \u0938\u094D\u0924\u094D\u0930\u0940 \u0938\u092E\u094D\u092C\u0928\u094D\u0927\u093F\u0924
 anc_profile.step7.substance_use_toaster.toaster_info_title = \u0930\u0915\u094D\u0938\u0940 \u0930 \u0932\u093E\u0917\u0942\u092A\u0926\u093E\u0930\u094D\u0925 \u092A\u094D\u0930\u092F\u094B\u0917 \u0938\u092E\u094D\u092C\u0928\u094D\u0927\u093F \u092A\u0930\u093E\u092E\u0930\u094D\u0936
-anc_profile.step5.flu_immun_status.options.seasonal_flu_dose_missing.text =\u0915\u0941\u0928\u0948 \u0916\u094B\u092A \u0928\u0932\u0917\u093E\u090F\u0915\u094B
+anc_profile.step5.flu_immun_status.options.seasonal_flu_dose_missing.text =\u0915\u0941\u0928\u0948 \u092A\u0928\u093F \u0921\u094B\u091C \u0932\u0917\u093E\u090F\u0915\u094B \u091B\u0948\u0928
 anc_profile.step4.allergies_other.hint = \u0916\u0941\u0932\u093E\u0909\u0928\u0941\u0939\u094B\u0938
 anc_profile.step7.hiv_counselling_toaster.toaster_info_title = \u090F\u091A \u0906\u0907 \u092D\u093F\u0915\u094B \u091C\u094B\u0916\u093F\u092E\u0915\u094B \u092C\u093E\u0930\u0947\u092E\u093E \u092A\u0930\u093E\u092E\u0930\u094D\u0936
 anc_profile.step7.caffeine_intake.hint =\u0926\u0948\u0928\u093F\u0915 \u0915\u092B\u0940 \u0938\u0947\u0935\u0928
@@ -291,7 +291,7 @@ anc_profile.step2.title = \u0939\u093E\u0932\u0915\u094B \u0917\u0930\u094D\u092
 anc_profile.step2.select_gest_age_edd_label.text = \u0917\u0930\u094D\u092D\u0909\u092E\u0947\u0930 \u091B\u093E\u0928\u094D\u0928\u0941\u0939\u094B\u0938
 anc_profile.step5.tt_immun_status.options.1-4_doses.text = \u092A\u0942\u0930\u094D\u0923 \u0916\u094B\u092A \u0928\u0932\u0917\u093E\u090F\u0915\u094B
 anc_profile.step3.prev_preg_comps.options.eclampsia.text = \u0907\u0915\u094D\u0932\u092F\u093E\u092E\u094D\u092A\u094D\u0938\u093F\u092F\u093E
-anc_profile.step5.immunised_against_flu_toaster.text =\u092E\u0939\u093F\u0932\u093E\u0932\u0947 \u092B\u094D\u0932\u0941 \u0916\u094B\u092A \u092A\u0942\u0930\u094D\u0923 \u0930\u0941\u092A\u092E\u093E \u0932\u0917\u093E\u090F\u0915\u0940 \u091B\u093F\u0928
+anc_profile.step5.immunised_against_flu_toaster.text =\u092E\u0939\u093F\u0932\u093E\u0932\u0947 \u0915\u094B\u092D\u093F\u0921 \u0935\u093F\u0930\u0941\u0926\u094D\u0927 \u0916\u094B\u092A \u0932\u0917\u093E\u0907\u0938\u0915\u0947\u0915\u0940 \u091B\u093F\u0928
 anc_profile.step1.occupation.options.informal_employment_other.text = \u0905\u0928\u094C\u092A\u091A\u093E\u0930\u093F\u0915 \u0930\u094B\u091C\u0917\u093E\u0930 
 anc_profile.step4.allergies.options.magnesium_carbonate.text = \u092E\u094D\u092F\u093E\u0917\u094D\u0928\u0947\u0938\u093F\u092F\u092E \u0915\u093E\u0930\u094D\u092C\u094B\u0928\u0947\u091F
 anc_profile.step4.health_conditions.options.none.text = \u0915\u0941\u0928\u0948 \u092A\u0928\u093F \u091B\u0948\u0928
