--- a/opensrp-anc/src/main/resources/contact_summary_np.properties
+++ b/opensrp-anc/src/main/resources/contact_summary_np.properties
@@ -44,9 +44,9 @@ contact_summary.immunisation_status.tt_immunisation_status = \u091F\u093F. \u092
 contact_summary.immunisation_status.tt_dose_1 =  \u091F\u093F. \u0921\u0940. \u0916\u094B\u092A #\u0967
 contact_summary.immunisation_status.tt_dose_2 = \u091F\u093F. \u0921\u0940. \u0916\u094B\u092A #\u0968
 contact_summary.immunisation_status.tt_dose_not_given = \u091F\u093F. \u0921\u0940. \u0916\u094B\u092A \u0926\u093F\u0907\u090F\u0915\u094B \u091B\u0948\u0928
-contact_summary.immunisation_status.flu_immunisation_status = \u092B\u094D\u0932\u0941 \u0916\u094B\u092A\u0915\u094B \u0939\u093F\u0938\u094D\u091F\u094D\u0930\u0940
-contact_summary.immunisation_status.flu_dose = \u092B\u094D\u0932\u0941 \u0916\u094B\u092A\u0915\u094B \u0921\u094B\u091C
-contact_summary.immunisation_status.flu_dose_not_given = \u092B\u094D\u0932\u0941 \u0916\u094B\u092A \u0926\u093F\u0907\u090F\u0915\u094B \u091B\u0948\u0928
+contact_summary.immunisation_status.flu_immunisation_status = \u0915\u094B\u092D\u093F\u0921 \u0916\u094B\u092A\u0915\u094B \u0939\u093F\u0938\u094D\u091F\u094D\u0930\u0940
+contact_summary.immunisation_status.flu_dose = \u0915\u094B\u092D\u093F\u0921 \u0916\u094B\u092A\u0915\u094B \u0921\u094B\u091C
+contact_summary.immunisation_status.flu_dose_not_given = \u0915\u094B\u092D\u093F\u0921 \u0916\u094B\u092A \u0926\u093F\u0907\u090F\u0915\u094B \u091B\u0948\u0928
 contact_summary.medications.current_medications = \u0939\u093E\u0932 \u0932\u093F\u0926\u0948 \u0917\u0930\u0947\u0915\u094B \u0914\u0937\u0927\u093F
 contact_summary.medications.medications_prescribed = \u0928\u093F\u0930\u094D\u0927\u093E\u0930\u093F\u0924 \u0914\u0937\u0927\u093F\u0939\u0930\u0942
 contact_summary.medications.calcium_compliance = \u0915\u094D\u092F\u093E\u0932\u094D\u0938\u093F\u092F\u092E \u0915\u092E\u092A\u094D\u0932\u093E\u0908\u0928\u094D\u0938
