--- a/opensrp-anc/src/main/resources/tests_syphilis_sub_form_np.properties
+++ b/opensrp-anc/src/main/resources/tests_syphilis_sub_form_np.properties
@@ -1,37 +1,37 @@
-tests_syphilis_sub_form.step1.syphilis_greater_5_toaster.text = यस क्षेत्रमा सिफिलिसको उच्च प्रकोप छ (५% वा बढी)।
-tests_syphilis_sub_form.step1.syphilis_danger_toaster.toaster_info_title = सिफिलिस पोजिटिभ
-tests_syphilis_sub_form.step1.syph_test_notdone.options.stock_out.text = परिक्षण सामाग्री सकिएको
-tests_syphilis_sub_form.step1.syph_test_type.label = सिफिलिस परिक्षणको प्रकार
-tests_syphilis_sub_form.step1.syphilis_greater_5_toaster.toaster_info_text = पहिले अन साइट रयापीड  सिफिलिस परिक्षण (RST) गर्न सुझाव दिने र यदी पोजिटिभ भएमा पहिलो डोजको औषधि दिनुहोस र रयार्पिड प्लाजमा रियाजिन (RPR) परिक्षणको लागि रिफरल गर्नुहोस,यदि आरपीआर परीक्षण पोसिटिभ छ भने, सिफिलिसको उपचार सुरु गर्नुहोस 
-tests_syphilis_sub_form.step1.syphilis_below_5_toaster.toaster_info_title = यस क्षेत्रमा सिफिलिसको कम प्रकोप छ (५% भन्दा कम)
-tests_syphilis_sub_form.step1.lab_syphilis_test.label =   सिफिलिसको लागि अफ साइट ल्याव परिक्षण 
-tests_syphilis_sub_form.step1.lab_syphilis_test.options.negative.text = सिफिलिस नेगेटिभ
-tests_syphilis_sub_form.step1.syph_test_notdone.options.other.text = परिक्षण नगर्नुको अरु कारणहरु (खुलाउनुहोस)
-tests_syphilis_sub_form.step1.syph_test_notdone_other.hint = परिक्षण नगर्नुको अरु कारणहरु (खुलाउनुहोस)
-tests_syphilis_sub_form.step1.syphilis_greater_5_toaster.toaster_info_title = यस क्षेत्रमा सिफिलिसको उच्च प्रकोप छ (५% वा बढी)।
-tests_syphilis_sub_form.step1.lab_syphilis_test.options.positive.text = सिफिलिस पोजिटिभ
-tests_syphilis_sub_form.step1.rpr_syphilis_test.label = रयापीड प्लास्मा रियजिन परिक्षण 
-tests_syphilis_sub_form.step1.rpr_syphilis_test.options.positive.text = सिफिलिस पोजिटिभ
-tests_syphilis_sub_form.step1.rpr_syphilis_test.options.negative.text = सिफिलिस नेगेटिभ
-tests_syphilis_sub_form.step1.syphilis_below_5_toaster.text =  यस क्षेत्रमा सिफिलिसको कम प्रकोप छ (५% भन्दा कम)
-tests_syphilis_sub_form.step1.syphilis_test_date.hint = सिफिलिस परिक्षण गरेको मिति 
-tests_syphilis_sub_form.step1.syph_test_notdone.label = परिक्षण नगर्नुको अरु कारणहरु (खुलाउनुहोस)
-tests_syphilis_sub_form.step1.rapid_syphilis_test.options.positive.text = सिफिलिस पोजिटिभ
-tests_syphilis_sub_form.step1.rapid_syphilis_test.label = रयापीड  सिफिलिस परिक्षण (RST)
-tests_syphilis_sub_form.step1.syph_test_notdone.options.expired_stock.text = सामाग्रीको म्याद सकिएको
-tests_syphilis_sub_form.step1.rapid_syphilis_test.options.negative.text = सिफिलिस नेगेटिभ
-tests_syphilis_sub_form.step1.syph_test_type.options.off_site_lab.text = अफ साइट ल्याव परिक्षण
-tests_syphilis_sub_form.step1.syph_test_type.options.rapid_plasma.text = रयापीड प्लास्मा रियजिन परिक्षण
-tests_syphilis_sub_form.step1.syphilis_below_5_toaster.toaster_info_text = गर्भवती महिलाहरूलाई अन साइट रयापीड सिफिलिस परिक्षण (RST) गर्नुपर्दछ 
-tests_syphilis_sub_form.step1.syphilis_danger_toaster.text = सिफिलिस परिक्षण पोजिटिभ
-tests_syphilis_sub_form.step1.syphilis_test_date.v_required.err = सिफिलिस परिक्षण गरेको मिति छान्नुहोस
-tests_syphilis_sub_form.step1.syph_test_type.options.rapid_syphilis.text = रयापीड  सिफिलिस परिक्षण (RST)
-tests_syphilis_sub_form.step1.syphilis_danger_toaster.toaster_info_text = प्रोटोकल अनुसार परामर्श र उपचार प्रदान गर्नुहोस्।
-tests_syphilis_sub_form.step1.syph_test_status.label = सिफिलिस परिक्षण
-tests_syphilis_sub_form.step1.syph_test_status.options.not_done.text = गरिएको छैन
-tests_syphilis_sub_form.step1.syph_test_status.options.done_today.text = आज गरिएको
-tests_syphilis_sub_form.step1.syph_test_status.options.done_earlier.text = पहिलै गरिएको
-tests_syphilis_sub_form.step1.syph_test_status.options.ordered.text = गर्न पठाइएको
+tests_syphilis_sub_form.step1.syphilis_greater_5_toaster.text = \u092F\u0938 \u0915\u094D\u0937\u0947\u0924\u094D\u0930\u092E\u093E \u0938\u093F\u092B\u093F\u0932\u093F\u0938\u0915\u094B \u0909\u091A\u094D\u091A \u092A\u094D\u0930\u0915\u094B\u092A \u091B (\u096B% \u0935\u093E \u092C\u0922\u0940)\u0964
+tests_syphilis_sub_form.step1.syphilis_danger_toaster.toaster_info_title = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u094B\u091C\u093F\u091F\u093F\u092D
+tests_syphilis_sub_form.step1.syph_test_notdone.options.stock_out.text = \u092A\u0930\u093F\u0915\u094D\u0937\u0923 \u0938\u093E\u092E\u093E\u0917\u094D\u0930\u0940 \u0938\u0915\u093F\u090F\u0915\u094B
+tests_syphilis_sub_form.step1.syph_test_type.label = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u0930\u093F\u0915\u094D\u0937\u0923\u0915\u094B \u092A\u094D\u0930\u0915\u093E\u0930
+tests_syphilis_sub_form.step1.syphilis_greater_5_toaster.toaster_info_text = \u092A\u0939\u093F\u0932\u0947 \u0905\u0928 \u0938\u093E\u0907\u091F \u0930\u092F\u093E\u092A\u0940\u0921  \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u0930\u093F\u0915\u094D\u0937\u0923 (RST) \u0917\u0930\u094D\u0928 \u0938\u0941\u091D\u093E\u0935 \u0926\u093F\u0928\u0947 \u0930 \u092F\u0926\u0940 \u092A\u094B\u091C\u093F\u091F\u093F\u092D \u092D\u090F\u092E\u093E \u092A\u0939\u093F\u0932\u094B \u0921\u094B\u091C\u0915\u094B \u0914\u0937\u0927\u093F \u0926\u093F\u0928\u0941\u0939\u094B\u0938 \u0930 \u0930\u092F\u093E\u0930\u094D\u092A\u093F\u0921 \u092A\u094D\u0932\u093E\u091C\u092E\u093E \u0930\u093F\u092F\u093E\u091C\u093F\u0928 (RPR) \u092A\u0930\u093F\u0915\u094D\u0937\u0923\u0915\u094B \u0932\u093E\u0917\u093F \u0930\u093F\u092B\u0930\u0932 \u0917\u0930\u094D\u0928\u0941\u0939\u094B\u0938,\u092F\u0926\u093F \u0906\u0930\u092A\u0940\u0906\u0930 \u092A\u0930\u0940\u0915\u094D\u0937\u0923 \u092A\u094B\u0938\u093F\u091F\u093F\u092D \u091B \u092D\u0928\u0947, \u0938\u093F\u092B\u093F\u0932\u093F\u0938\u0915\u094B \u0909\u092A\u091A\u093E\u0930 \u0938\u0941\u0930\u0941 \u0917\u0930\u094D\u0928\u0941\u0939\u094B\u0938 
+tests_syphilis_sub_form.step1.syphilis_below_5_toaster.toaster_info_title = \u092F\u0938 \u0915\u094D\u0937\u0947\u0924\u094D\u0930\u092E\u093E \u0938\u093F\u092B\u093F\u0932\u093F\u0938\u0915\u094B \u0915\u092E \u092A\u094D\u0930\u0915\u094B\u092A \u091B (\u096B% \u092D\u0928\u094D\u0926\u093E \u0915\u092E)
+tests_syphilis_sub_form.step1.lab_syphilis_test.label =   \u0938\u093F\u092B\u093F\u0932\u093F\u0938\u0915\u094B \u0932\u093E\u0917\u093F \u0905\u092B \u0938\u093E\u0907\u091F \u0932\u094D\u092F\u093E\u0935 \u092A\u0930\u093F\u0915\u094D\u0937\u0923 
+tests_syphilis_sub_form.step1.lab_syphilis_test.options.negative.text = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u0928\u0947\u0917\u0947\u091F\u093F\u092D
+tests_syphilis_sub_form.step1.syph_test_notdone.options.other.text = \u092A\u0930\u093F\u0915\u094D\u0937\u0923 \u0928\u0917\u0930\u094D\u0928\u0941\u0915\u094B \u0905\u0930\u0941 \u0915\u093E\u0930\u0923\u0939\u0930\u0941 (\u0916\u0941\u0932\u093E\u0909\u0928\u0941\u0939\u094B\u0938)
+tests_syphilis_sub_form.step1.syph_test_notdone_other.hint = \u092A\u0930\u093F\u0915\u094D\u0937\u0923 \u0928\u0917\u0930\u094D\u0928\u0941\u0915\u094B \u0905\u0930\u0941 \u0915\u093E\u0930\u0923\u0939\u0930\u0941 (\u0916\u0941\u0932\u093E\u0909\u0928\u0941\u0939\u094B\u0938)
+tests_syphilis_sub_form.step1.syphilis_greater_5_toaster.toaster_info_title = \u092F\u0938 \u0915\u094D\u0937\u0947\u0924\u094D\u0930\u092E\u093E \u0938\u093F\u092B\u093F\u0932\u093F\u0938\u0915\u094B \u0909\u091A\u094D\u091A \u092A\u094D\u0930\u0915\u094B\u092A \u091B (\u096B% \u0935\u093E \u092C\u0922\u0940)\u0964
+tests_syphilis_sub_form.step1.lab_syphilis_test.options.positive.text = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u094B\u091C\u093F\u091F\u093F\u092D
+tests_syphilis_sub_form.step1.rpr_syphilis_test.label = \u0930\u092F\u093E\u092A\u0940\u0921 \u092A\u094D\u0932\u093E\u0938\u094D\u092E\u093E \u0930\u093F\u092F\u091C\u093F\u0928 \u092A\u0930\u093F\u0915\u094D\u0937\u0923 
+tests_syphilis_sub_form.step1.rpr_syphilis_test.options.positive.text = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u094B\u091C\u093F\u091F\u093F\u092D
+tests_syphilis_sub_form.step1.rpr_syphilis_test.options.negative.text = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u0928\u0947\u0917\u0947\u091F\u093F\u092D
+tests_syphilis_sub_form.step1.syphilis_below_5_toaster.text =  \u092F\u0938 \u0915\u094D\u0937\u0947\u0924\u094D\u0930\u092E\u093E \u0938\u093F\u092B\u093F\u0932\u093F\u0938\u0915\u094B \u0915\u092E \u092A\u094D\u0930\u0915\u094B\u092A \u091B (\u096B% \u092D\u0928\u094D\u0926\u093E \u0915\u092E)
+tests_syphilis_sub_form.step1.syphilis_test_date.hint = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u0930\u093F\u0915\u094D\u0937\u0923 \u0917\u0930\u0947\u0915\u094B \u092E\u093F\u0924\u093F 
+tests_syphilis_sub_form.step1.syph_test_notdone.label = \u092A\u0930\u093F\u0915\u094D\u0937\u0923 \u0928\u0917\u0930\u094D\u0928\u0941\u0915\u094B \u0905\u0930\u0941 \u0915\u093E\u0930\u0923\u0939\u0930\u0941 (\u0916\u0941\u0932\u093E\u0909\u0928\u0941\u0939\u094B\u0938)
+tests_syphilis_sub_form.step1.rapid_syphilis_test.options.positive.text = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u094B\u091C\u093F\u091F\u093F\u092D
+tests_syphilis_sub_form.step1.rapid_syphilis_test.label = \u0930\u092F\u093E\u092A\u0940\u0921  \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u0930\u093F\u0915\u094D\u0937\u0923 (RST)
+tests_syphilis_sub_form.step1.syph_test_notdone.options.expired_stock.text = \u0938\u093E\u092E\u093E\u0917\u094D\u0930\u0940\u0915\u094B \u092E\u094D\u092F\u093E\u0926 \u0938\u0915\u093F\u090F\u0915\u094B
+tests_syphilis_sub_form.step1.rapid_syphilis_test.options.negative.text = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u0928\u0947\u0917\u0947\u091F\u093F\u092D
+tests_syphilis_sub_form.step1.syph_test_type.options.off_site_lab.text = \u0905\u092B \u0938\u093E\u0907\u091F \u0932\u094D\u092F\u093E\u0935 \u092A\u0930\u093F\u0915\u094D\u0937\u0923
+tests_syphilis_sub_form.step1.syph_test_type.options.rapid_plasma.text = \u0930\u092F\u093E\u092A\u0940\u0921 \u092A\u094D\u0932\u093E\u0938\u094D\u092E\u093E \u0930\u093F\u092F\u091C\u093F\u0928 \u092A\u0930\u093F\u0915\u094D\u0937\u0923
+tests_syphilis_sub_form.step1.syphilis_below_5_toaster.toaster_info_text = \u0917\u0930\u094D\u092D\u0935\u0924\u0940 \u092E\u0939\u093F\u0932\u093E\u0939\u0930\u0942\u0932\u093E\u0908 \u0905\u0928 \u0938\u093E\u0907\u091F \u0930\u092F\u093E\u092A\u0940\u0921 \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u0930\u093F\u0915\u094D\u0937\u0923 (RST) \u0917\u0930\u094D\u0928\u0941\u092A\u0930\u094D\u0926\u091B 
+tests_syphilis_sub_form.step1.syphilis_danger_toaster.text = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u0930\u093F\u0915\u094D\u0937\u0923 \u092A\u094B\u091C\u093F\u091F\u093F\u092D
+tests_syphilis_sub_form.step1.syphilis_test_date.v_required.err = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u0930\u093F\u0915\u094D\u0937\u0923 \u0917\u0930\u0947\u0915\u094B \u092E\u093F\u0924\u093F \u091B\u093E\u0928\u094D\u0928\u0941\u0939\u094B\u0938
+tests_syphilis_sub_form.step1.syph_test_type.options.rapid_syphilis.text = \u0930\u092F\u093E\u092A\u0940\u0921  \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u0930\u093F\u0915\u094D\u0937\u0923 (RST)
+tests_syphilis_sub_form.step1.syphilis_danger_toaster.toaster_info_text = \u092A\u094D\u0930\u094B\u091F\u094B\u0915\u0932 \u0905\u0928\u0941\u0938\u093E\u0930 \u092A\u0930\u093E\u092E\u0930\u094D\u0936 \u0930 \u0909\u092A\u091A\u093E\u0930 \u092A\u094D\u0930\u0926\u093E\u0928 \u0917\u0930\u094D\u0928\u0941\u0939\u094B\u0938\u094D\u0964
+tests_syphilis_sub_form.step1.syph_test_status.label = \u0938\u093F\u092B\u093F\u0932\u093F\u0938 \u092A\u0930\u093F\u0915\u094D\u0937\u0923
+tests_syphilis_sub_form.step1.syph_test_status.options.not_done.text = \u0917\u0930\u093F\u090F\u0915\u094B \u091B\u0948\u0928
+tests_syphilis_sub_form.step1.syph_test_status.options.done_today.text = \u0906\u091C \u0917\u0930\u093F\u090F\u0915\u094B
+tests_syphilis_sub_form.step1.syph_test_status.options.done_earlier.text = \u092A\u0939\u093F\u0932\u0948 \u0917\u0930\u093F\u090F\u0915\u094B
+tests_syphilis_sub_form.step1.syph_test_status.options.ordered.text = \u0917\u0930\u094D\u0928 \u092A\u0920\u093E\u0907\u090F\u0915\u094B
 
 
 
