--- a/opensrp-anc/src/main/resources/anc_register_np.properties
+++ b/opensrp-anc/src/main/resources/anc_register_np.properties
@@ -6,7 +6,7 @@ anc_register.step1.home_address.hint = \u0920\u0947\u0917\u093E\u0928\u093E
 anc_register.step1.village_address.hint = \u0917\u093E\u0909\u0901 \u0915\u094B \u0920\u0947\u0917\u093E\u0928\u093E
 anc_register.step1.alt_name.v_regex.err = \u0915\u0943\u092A\u092F\u093E VHT \u0928\u093E\u092E \u0932\u0947\u0916\u094D\u0928\u0941\u0939\u094B\u0938
 anc_register.step1.anc_id.hint = \u0906\u0907 \u0921\u0940
-anc_register.step1.anc_card_id.hint = \u092E\u0941\u0932 \u0926\u0930\u094D\u0924\u093E \u0928\u092E\u094D\u092C\u0930
+anc_register.step1.card_id.hint = \u092E\u0941\u0932 \u0926\u0930\u094D\u0924\u093E \u0928\u092E\u094D\u092C\u0930
 anc_register.step1.alt_phone_number.v_numeric.err = \u092B\u094B\u0928 \u0928\u092E\u094D\u092C\u0930 \u0905\u0902\u0915\u092E\u093E \u0939\u0941\u0928\u0941\u092A\u0930\u094D\u091B
 anc_register.step1.age_entered.v_numeric.err = \u0909\u092E\u0947\u0930 \u0905\u0902\u0915\u092E\u093E \u0939\u0941\u0928\u0941\u092A\u0930\u094D\u091B
 anc_register.step1.phone_number.hint = \u092E\u0939\u093F\u0932\u093E\u0915\u094B \u092B\u094B\u0928  \u0928\u092E\u094D\u092C\u0930
@@ -28,7 +28,7 @@ anc_register.step1.first_name.v_regex.err = \u0915\u0943\u092A\u092F\u093E \u092
 anc_register.step1.reminders.options.yes.text = \u0939\u094B
 anc_register.step1.phone_number.v_numeric.err = \u092B\u094B\u0928 \u0928\u092E\u094D\u092C\u0930 \u0905\u0902\u0915\u092E\u093E \u0939\u0941\u0928\u0941\u092A\u0930\u094D\u091B
 anc_register.step1.anc_id.v_required.err = \u0915\u0943\u092A\u092F\u093E \u0917\u0930\u094D\u092D\u0935\u0924\u0940 \u0926\u0930\u094D\u0924\u093E \u0928\u092E\u094D\u092C\u0930 \u0932\u0947\u0916\u094D\u0928\u0941\u0939\u094B\u0938****************************************************
-anc_register.step1.anc_card_id.v_required.err = \u0915\u0943\u092A\u092F\u093E \u0917\u0930\u094D\u092D\u0935\u0924\u0940 \u0926\u0930\u094D\u0924\u093E \u0928\u092E\u094D\u092C\u0930 \u0932\u0947\u0916\u094D\u0928\u0941\u0939\u094B\u0938
+anc_register.step1.card_id.v_required.err = \u0915\u0943\u092A\u092F\u093E \u0917\u0930\u094D\u092D\u0935\u0924\u0940 \u0926\u0930\u094D\u0924\u093E \u0928\u092E\u094D\u092C\u0930 \u0932\u0947\u0916\u094D\u0928\u0941\u0939\u094B\u0938
 anc_register.step1.last_name.hint = \u0925\u0930
 anc_register.step1.age_entered.v_required.err = \u0915\u0943\u092A\u092F\u093E \u092E\u0939\u093F\u0932\u093E\u0915\u094B \u0909\u092E\u0947\u0930 \u0932\u0947\u0916\u094D\u0928\u0941\u0939\u094B\u0938
 anc_register.step1.phone_number.v_required.err = \u0915\u0943\u092A\u092F\u093E \u092E\u0939\u093F\u0932\u093E\u0915\u094B \u092B\u094B\u0928 \u0928\u092E\u094D\u092C\u0930 \u0932\u0947\u0916\u094D\u0928\u0941\u0939\u094B\u0938
